# my-project

./: README.md  example_usage.ipynb  pyproject.toml
my_project/: __init__.py  __main__.py
