[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.1.0"
description = "Monte Carlo European call option pricing tool"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Ziying Chen" }
]
dependencies = []